--- a/frontend/register.html
+++ b/frontend/register.html
@@ -36,7 +36,7 @@
         </div>
       </nav>
 
-    <div class="container d-flex align-items-center">
+    <div class="container d-flex align-items-center" style="height: calc(100vh - 56px);">
       <div class="form-container">
         <h1>Sign up</h1>
         <form class="custom-form">
