--- a/resources/frontend/blogs.html
+++ b/resources/frontend/blogs.html
@@ -25,13 +25,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="blogs.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -127,42 +120,9 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="text-white">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>About RE/MAX</h5>
-                    <p>Leading real estate agency helping people find their dream homes since 1973.</p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Properties</a></li>
-                        <li><a href="#">Agents</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5>Follow Us</h5>
-                    <div class="social-links">
-                        <a href="#" class="me-3"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-4">
-                <div class="col-12 text-center">
-                    <p class="mb-0">&copy; 2025 RE/MAX Québec. All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
+    <div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
