--- a/resources/frontend/profile.html
+++ b/resources/frontend/profile.html
@@ -32,7 +32,7 @@
                         <a href="#" class="text-dark me-3 link-underline-light">Fr</a>
                         <div class="dropdown">
                             <button class="btn dropdown-toggle d-flex align-items-center" type="button" id="profileDropdown" data-bs-toggle="dropdown">
-                                <img src="image/avatar-holder.jpg" alt="Profile" class="rounded-circle me-2" width="32" height="32">
+                                <img src="image/avatar-holder.jpeg" alt="Profile" class="rounded-circle me-2" width="32" height="32">
                                 <span>John Smith</span>
                             </button>
                         </div>
@@ -67,7 +67,7 @@
                             <form>
                                 <div class="row mb-4">
                                     <div class="col-md-2 text-center">
-                                        <img src="image/avatar-holder.jpg" alt="Profile Picture" class="rounded-circle" width="100" height="100">
+                                        <img src="image/avatar-holder.jpeg" alt="Profile Picture" class="rounded-circle" width="100" height="100">
                                     </div>
                                 </div>
                                 <div class="row">
@@ -140,5 +140,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
