--- a/resources/frontend/property.html
+++ b/resources/frontend/property.html
@@ -27,12 +27,6 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="properties.html">Properties</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -43,13 +37,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-8">
-                    <span class="badge bg-primary mb-2">Bungalow</span>
+                    <span class="badge bg-primary mb-2">Residential</span>
                     <h1 class="mb-3">1090 Rue du Poitou</h1>
                     <p class="text-muted mb-0">Montréal (Rivière-des-Prairies/Pointe-aux-Trembles)</p>
                 </div>
                 <div class="col-lg-4 text-lg-end">
                     <p class="property-price mb-2">$749,000</p>
-                    <span class="badge bg-success">Open House Tomorrow 14:00-16:00</span>
                 </div>
             </div>
         </div>
@@ -64,33 +57,6 @@
             </div>
         </div>
 
-        <!-- Quick Features -->
-        <div class="row mb-5">
-            <div class="col-md-3">
-                <div class="property-features text-center">
-                    <i class="fas fa-bed feature-icon"></i>
-                    <h4>5 Bedrooms</h4>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="property-features text-center">
-                    <i class="fas fa-bath feature-icon"></i>
-                    <h4>2.5 Baths</h4>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="property-features text-center">
-                    <i class="fas fa-vector-square feature-icon"></i>
-                    <h4>1,845 ft²</h4>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="property-features text-center">
-                    <i class="fas fa-car feature-icon"></i>
-                    <h4>2 Parking</h4>
-                </div>
-            </div>
-        </div>
 
         <div class="row">
             <!-- Property Details -->
@@ -123,130 +89,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Special Features -->
-                <div class="detail-section">
-                    <h3>Special Features</h3>
-                    <div class="mb-4">
-                        <span class="amenity-badge"><i class="fas fa-swimming-pool me-2"></i>Indoor Saltwater Pool</span>
-                        <span class="amenity-badge"><i class="fas fa-hot-tub me-2"></i>Spa</span>
-                        <span class="amenity-badge"><i class="fas fa-sun me-2"></i>Sauna</span>
-                        <span class="amenity-badge"><i class="fas fa-fan me-2"></i>DRY-O-TRO System</span>
-                        <span class="amenity-badge"><i class="fas fa-door-open me-2"></i>Private Pool Entrance</span>
-                    </div>
-                </div>
-
-                <!-- Room Details -->
-                <div class="detail-section">
-                    <h3>Room Details</h3>
-                    <div class="table-responsive">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Room</th>
-                                    <th>Level</th>
-                                    <th>Dimensions</th>
-                                    <th>Flooring</th>
-                                    <th>Details</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Living room</td>
-                                    <td>1st level/Ground floor</td>
-                                    <td>12'4" X 13'9"</td>
-                                    <td>Granite</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Kitchen</td>
-                                    <td>1st level/Ground floor</td>
-                                    <td>17'10" X 10'1"</td>
-                                    <td>Granite</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Primary bedroom</td>
-                                    <td>1st level/Ground floor</td>
-                                    <td>11'2" X 13'7"</td>
-                                    <td>Granite</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Solarium/Sunroom</td>
-                                    <td>1st level/Ground floor</td>
-                                    <td>20'9" X 33'1"</td>
-                                    <td>Ceramic</td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                            <tbody class="collapse" id="additionalRooms">
-                                <tr>
-                                    <td>Bedroom</td>
-                                    <td>1st level/Ground floor</td>
-                                    <td>11'3" X 12'7"</td>
-                                    <td>Granite</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Bedroom</td>
-                                    <td>1st level/Ground floor</td>
-                                    <td>8'5" X 11'4"</td>
-                                    <td>Granite</td>
-                                    <td>or dining room</td>
-                                </tr>
-                                <tr>
-                                    <td>Bathroom</td>
-                                    <td>1st level/Ground floor</td>
-                                    <td>6'5" X 6'9"</td>
-                                    <td>Marble</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Bedroom</td>
-                                    <td>Basement 1</td>
-                                    <td>10'10" X 18'8"</td>
-                                    <td>Ceramic</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Bedroom</td>
-                                    <td>Basement 1</td>
-                                    <td>10'11" X 13'6"</td>
-                                    <td>Ceramic</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Bathroom</td>
-                                    <td>Basement 1</td>
-                                    <td>10'8" X 11'7"</td>
-                                    <td>Ceramic</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Laundry room</td>
-                                    <td>Basement 1</td>
-                                    <td>7'11" X 9'8"</td>
-                                    <td>Ceramic</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Workshop</td>
-                                    <td>Basement 1</td>
-                                    <td>8'0" X 10'1"</td>
-                                    <td>Concrete</td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="text-center mt-3">
-                            <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#additionalRooms" aria-expanded="false" aria-controls="additionalRooms">
-                                <span class="collapsed-text">Show More Rooms <i class="fas fa-chevron-down ms-2"></i></span>
-                                <span class="expanded-text d-none">Show Less <i class="fas fa-chevron-up ms-2"></i></span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
             </div>
 
             <!-- Sidebar -->
@@ -267,163 +109,12 @@
                         </a>
                     </div>
                 </div>
-
-                <!-- Mortgage Calculator -->
-                <div class="property-features mb-4">
-                    <h3>Mortgage Calculator</h3>
-                    <form>
-                        <div class="mb-3">
-                            <label class="form-label">Property Price</label>
-                            <input type="text" class="form-control" value="$749,000" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Down Payment</label>
-                            <input type="number" class="form-control" placeholder="Enter amount">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Interest Rate (%)</label>
-                            <input type="number" class="form-control" step="0.1" placeholder="Enter rate">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Amortization (years)</label>
-                            <select class="form-select">
-                                <option>25</option>
-                                <option>20</option>
-                                <option>15</option>
-                                <option>10</option>
-                            </select>
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">Calculate</button>
-                    </form>
-                </div>
             </div>
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="text-white">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>About RE/MAX</h5>
-                    <p>Leading real estate agency helping people find their dream homes since 1973.</p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Properties</a></li>
-                        <li><a href="#">Agents</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5>Follow Us</h5>
-                    <div class="social-links">
-                        <a href="#" class="me-3"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-4">
-                <div class="col-12 text-center">
-                    <p class="mb-0">&copy; 2025 RE/MAX Québec. All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Contact Modal -->
-    <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header border-0">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body px-4 pb-4">
-                    <div class="text-center mb-4">
-                        <img src="image/avatar-holder.jpeg" alt="NORMAND SHANKS" class="rounded-circle mb-3" style="width: 100px; height: 100px; object-fit: cover;">
-                        <h4 class="mb-1">NORMAND SHANKS</h4>
-                        <p class="text-muted mb-0">Certified Real Estate Broker, AEO</p>
-                        <p class="mb-0">RE/MAX DU CARTIER INC.</p>
-                    </div>
-                    <form id="contactForm">
-                        <div class="mb-3">
-                            <label class="form-label">First name*</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Last name*</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Email address*</label>
-                            <input type="email" class="form-control" required>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Phone number</label>
-                            <input type="tel" class="form-control">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Message*</label>
-                            <textarea class="form-control" rows="4" required>I would like more information about the property for sale: 1090 Rue du Poitou, Montréal (Rivière-des-Prairies/Pointe-aux-Trembles) (Pointe-aux-Trembles)</textarea>
-                        </div>
-                        <div class="mb-3">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="marketingConsent">
-                                <label class="form-check-label" for="marketingConsent">
-                                    I agree to receive marketing communications and offers from RE/MAX Québec
-                                    <i class="fas fa-info-circle ms-1" data-bs-toggle="tooltip" title="You can unsubscribe at any time"></i>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="text-end">
-                            <button type="button" class="btn btn-outline-secondary me-2" data-bs-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-primary">Send</button>
-                        </div>
-                        <div class="mt-3">
-                            <small class="text-muted">
-                                This site is protected by reCAPTCHA and the Google 
-                                <a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and 
-                                <a href="https://policies.google.com/terms" target="_blank">Terms of Service</a> apply.
-                            </small>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        document.querySelector('[data-bs-toggle="collapse"]').addEventListener('click', function() {
-            const collapsedText = this.querySelector('.collapsed-text');
-            const expandedText = this.querySelector('.expanded-text');
-            if (this.getAttribute('aria-expanded') === 'false') {
-                collapsedText.classList.add('d-none');
-                expandedText.classList.remove('d-none');
-            } else {
-                collapsedText.classList.remove('d-none');
-                expandedText.classList.add('d-none');
-            }
-        });
-
-        // Initialize tooltips
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        });
-
-        // Handle form submission
-        document.getElementById('contactForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            // Add your form submission logic here
-            var modal = bootstrap.Modal.getInstance(document.getElementById('contactModal'));
-            modal.hide();
-            // You can show a success message here
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
