index login register blade.php

--- a/resources/frontend/blogs.html
+++ b/resources/frontend/blogs.html
@@ -6,14 +6,14 @@
     <title>Blog Articles - RE/MAX Québec</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0c2340;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="image/logo.png" alt="RE/MAX Logo" height="40">
+                <img src="img/logo.png" alt="RE/MAX Logo" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -21,10 +21,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="properties.html">Properties</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="blogs.html">Blog</a>
+                        <a class="nav-link" href="blogs.html">Blogs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="register.html">Register</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -37,7 +44,7 @@
                 <!-- Featured Article Column -->
                 <div class="col-lg-7">
                     <article class="card border-0 shadow-sm h-100">
-                        <img src="image/zCnIuLxyIzQxM44pe9CfYCVOTokSRE8UDZSw3WUN_medium.jpeg" class="card-img-top" alt="Spring Cleaning Tips" style="height: 400px; object-fit: cover;">
+                        <img src="img/blogs/zCnIuLxyIzQxM44pe9CfYCVOTokSRE8UDZSw3WUN_medium.jpeg" class="card-img-top" alt="Spring Cleaning Tips" style="height: 400px; object-fit: cover;">
                         <div class="card-body">
                             <span class="badge bg-secondary mb-2">Lifestyle</span>
                             <h1 class="card-title h2">9 Tips for Successful Spring Cleaning</h1>
@@ -56,7 +63,7 @@
                         <article class="card border-0 shadow-sm">
                             <div class="row g-0">
                                 <div class="col-4">
-                                    <img src="image/SbCxE4CcXDEpTiDi0i2P5Qi19vGtulvQ3NP1QKZM_medium.jpeg" class="img-fluid h-100" alt="Home Organization" style="object-fit: cover;">
+                                    <img src="img/blogs/SbCxE4CcXDEpTiDi0i2P5Qi19vGtulvQ3NP1QKZM_medium.jpeg" class="img-fluid h-100" alt="Home Organization" style="object-fit: cover;">
                                 </div>
                                 <div class="col-8">
                                     <div class="card-body">
@@ -72,7 +79,7 @@
                         <article class="card border-0 shadow-sm">
                             <div class="row g-0">
                                 <div class="col-4">
-                                    <img src="image/trouver-courtier.jpeg" class="img-fluid h-100" alt="House Selling" style="object-fit: cover;">
+                                    <img src="img/blogs/trouver-courtier.jpeg" class="img-fluid h-100" alt="House Selling" style="object-fit: cover;">
                                 </div>
                                 <div class="col-8">
                                     <div class="card-body">
@@ -88,7 +95,7 @@
                         <article class="card border-0 shadow-sm">
                             <div class="row g-0">
                                 <div class="col-4">
-                                    <img src="image/dP7VlxxYkPaL5kDbLOYBM9hoqhQCgHhNbVedUJkx_medium.jpeg" class="img-fluid h-100" alt="Home Damage" style="object-fit: cover;">
+                                    <img src="img/blogs/dP7VlxxYkPaL5kDbLOYBM9hoqhQCgHhNbVedUJkx_medium.jpeg" class="img-fluid h-100" alt="Home Damage" style="object-fit: cover;">
                                 </div>
                                 <div class="col-8">
                                     <div class="card-body">
@@ -104,7 +111,7 @@
                         <article class="card border-0 shadow-sm">
                             <div class="row g-0">
                                 <div class="col-4">
-                                    <img src="image/blog.jpeg" class="img-fluid h-100" alt="Interior Design" style="object-fit: cover;">
+                                    <img src="img/blogs/blog.jpeg" class="img-fluid h-100" alt="Interior Design" style="object-fit: cover;">
                                 </div>
                                 <div class="col-8">
                                     <div class="card-body">
@@ -123,6 +130,6 @@
     <div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/app.css"></script>
 </body>
 </html>
