--- a/resources/frontend/property.html
+++ b/resources/frontend/property.html
@@ -6,7 +6,7 @@
     <title>1090 Rue du Poitou - RE/MAX Québec</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/app.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0c2340;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="image/logo.png" alt="RE/MAX Logo" height="40">
+                <img src="img/logo.png" alt="RE/MAX Logo" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -22,10 +22,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="properties.html">Properties</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="properties.html">Properties</a>
+                        <a class="nav-link" href="blogs.html">Blogs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="register.html">Register</a>
                     </li>
                 </ul>
             </div>
@@ -53,7 +59,7 @@
         <!-- Property Gallery -->
         <div class="row mb-5">
             <div class="col-12">
-                <img src="image/1924.jpeg" alt="Property Main Image" class="gallery-img w-100">
+                <img src="img/1924.jpeg" alt="Property Main Image" class="gallery-img w-100">
             </div>
         </div>
 
@@ -97,7 +103,7 @@
                 <div class="broker-card mb-4">
                     <h3>Contact Broker</h3>
                     <div class="text-center mb-4">
-                        <img src="image/avatar-holder.jpeg" alt="NORMAND SHANKS" class="rounded-circle mb-3" style="width: 150px; height: 150px; object-fit: cover;">
+                        <img src="img/avatar-holder.jpeg" alt="NORMAND SHANKS" class="rounded-circle mb-3" style="width: 150px; height: 150px; object-fit: cover;">
                         <h4>NORMAND SHANKS</h4>
                         <p class="text-muted">Certified Real Estate Broker, AEO</p>
                         <p class="mb-3">RE/MAX DU CARTIER INC.</p>
@@ -115,6 +121,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/app.css"></script>
 </body>
 </html>
