--- a/resources/frontend/blog.html
+++ b/resources/frontend/blog.html
@@ -6,14 +6,14 @@
     <title>9 Tips for Successful Spring Cleaning - RE/MAX Québec</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0c2340;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="image/logo.png" alt="RE/MAX Logo" height="40">
+                <img src="img/logo.png" alt="RE/MAX Logo" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="properties.html">Properties</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blogs.html">Blogs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="register.html">Register</a>
                     </li>
                 </ul>
             </div>
@@ -45,7 +54,7 @@
     <main class="container py-5">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <img src="image/zCnIuLxyIzQxM44pe9CfYCVOTokSRE8UDZSw3WUN_medium.jpeg" alt="Spring Cleaning Tips" class="article-image">
+                <img src="img/blogs/zCnIuLxyIzQxM44pe9CfYCVOTokSRE8UDZSw3WUN_medium.jpeg" alt="Spring Cleaning Tips" class="article-image">
                 
                 <div class="article-content">
                     <p class="lead">To effectively spring clean your home, you must be organized and methodical. Here's our advice on how to make your spring cleaning successful and efficient.</p>
@@ -91,6 +100,6 @@
     <div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/app.css"></script>
 </body>
 </html>
