--- a/resources/frontend/index.html
+++ b/resources/frontend/index.html
@@ -6,14 +6,14 @@
     <title>RE/MAX - Find Your Future Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/css/app.css" />
   </head>
   <body class="home">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0c2340;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="image/logo.png" alt="RE/MAX Logo" height="40">
+                <img src="img/logo.png" alt="RE/MAX Logo" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
     </nav>
 
     <main>
-      <section class="hero-section">
+      <section class="hero-section" style="  background-image: url('img/1920.jpeg')">
         <div class="container">
           <h1 class="mb-30">One click away from your future home!</h1>
           <p class="mb-5">Find the property of your dreams</p>
@@ -51,6 +51,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
