--- a/resources/frontend/profile.html
+++ b/resources/frontend/profile.html
@@ -6,7 +6,7 @@
     <title>My Profile - RE/MAX</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
     <div class="profile-wrapper">
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="image/logo.png" alt="RE/MAX Logo" height="40">
+                    <img src="img/logo.png" alt="RE/MAX Logo" height="40">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
                         <a href="#" class="text-dark me-3 link-underline-light">Fr</a>
                         <div class="dropdown">
                             <button class="btn dropdown-toggle d-flex align-items-center" type="button" id="profileDropdown" data-bs-toggle="dropdown">
-                                <img src="image/avatar-holder.jpeg" alt="Profile" class="rounded-circle me-2" width="32" height="32">
+                                <img src="img/avatar-holder.jpeg" alt="Profile" class="rounded-circle me-2" width="32" height="32">
                                 <span>John Smith</span>
                             </button>
                         </div>
@@ -67,7 +67,7 @@
                             <form>
                                 <div class="row mb-4">
                                     <div class="col-md-2 text-center">
-                                        <img src="image/avatar-holder.jpeg" alt="Profile Picture" class="rounded-circle" width="100" height="100">
+                                        <img src="img/avatar-holder.jpeg" alt="Profile Picture" class="rounded-circle" width="100" height="100">
                                     </div>
                                 </div>
                                 <div class="row">
@@ -140,6 +140,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/app.css"></script>
 </body>
 </html>
