--- a/resources/frontend/properties.html
+++ b/resources/frontend/properties.html
@@ -6,13 +6,35 @@
     <title>Properties - RE/MAX</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg bg-white">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="image/logo.png" alt="RE/MAX Logo" height="50"></a>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0c2340;">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="img/logo.png" alt="RE/MAX Logo" height="40">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="properties.html">Properties</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blogs.html">Blogs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="register.html">Register</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <!-- Search and Filter Section -->
@@ -112,7 +134,7 @@
                         <div class="card h-100">
                             <div class="position-relative">
                                 <span class="position-absolute top-0 start-0 badge bg-primary m-2">New</span>
-                                <img src="image/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
+                                <img src="img/properties/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
                                 <button class="btn position-absolute top-0 end-0 m-2 text-white">
                                     <i class="far fa-heart"></i>
                                 </button>
@@ -137,7 +159,7 @@
                         <div class="card h-100">
                             <div class="position-relative">
                                 <span class="position-absolute top-0 start-0 badge bg-primary m-2">New</span>
-                                <img src="image/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
+                                <img src="/img/properties/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
                                 <button class="btn position-absolute top-0 end-0 m-2 text-white">
                                     <i class="far fa-heart"></i>
                                 </button>
@@ -162,7 +184,7 @@
                         <div class="card h-100">
                             <div class="position-relative">
                                 <span class="position-absolute top-0 start-0 badge bg-primary m-2">New</span>
-                                <img src="image/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
+                                <img src="img/properties/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
                                 <button class="btn position-absolute top-0 end-0 m-2 text-white">
                                     <i class="far fa-heart"></i>
                                 </button>
@@ -187,7 +209,7 @@
                         <div class="card h-100">
                             <div class="position-relative">
                                 <span class="position-absolute top-0 start-0 badge bg-primary m-2">New</span>
-                                <img src="image/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
+                                <img src="img/properties/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
                                 <button class="btn position-absolute top-0 end-0 m-2 text-white">
                                     <i class="far fa-heart"></i>
                                 </button>
@@ -212,7 +234,7 @@
                         <div class="card h-100">
                             <div class="position-relative">
                                 <span class="position-absolute top-0 start-0 badge bg-primary m-2">New</span>
-                                <img src="image/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
+                                <img src="img/properties/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
                                 <button class="btn position-absolute top-0 end-0 m-2 text-white">
                                     <i class="far fa-heart"></i>
                                 </button>
@@ -237,7 +259,7 @@
                         <div class="card h-100">
                             <div class="position-relative">
                                 <span class="position-absolute top-0 start-0 badge bg-primary m-2">New</span>
-                                <img src="image/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
+                                <img src="img/properties/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
                                 <button class="btn position-absolute top-0 end-0 m-2 text-white">
                                     <i class="far fa-heart"></i>
                                 </button>
@@ -262,7 +284,7 @@
                         <div class="card h-100">
                             <div class="position-relative">
                                 <span class="position-absolute top-0 start-0 badge bg-primary m-2">New</span>
-                                <img src="image/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
+                                <img src="img/properties/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
                                 <button class="btn position-absolute top-0 end-0 m-2 text-white">
                                     <i class="far fa-heart"></i>
                                 </button>
@@ -287,7 +309,7 @@
                         <div class="card h-100">
                             <div class="position-relative">
                                 <span class="position-absolute top-0 start-0 badge bg-primary m-2">New</span>
-                                <img src="image/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
+                                <img src="img/properties/collection_img.png" class="card-img-top" alt="Property Image" style="height: 200px; object-fit: cover;">
                                 <button class="btn position-absolute top-0 end-0 m-2 text-white">
                                     <i class="far fa-heart"></i>
                                 </button>
@@ -328,6 +350,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/app.css"></script>
 </body>
 </html>
