--- a/resources/frontend/register.html
+++ b/resources/frontend/register.html
@@ -5,28 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY RE/MAX - Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/css/app.css" />
   </head>
   <body class="sign">
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="image/logo.png" alt="Bootstrap" height="50"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="btn btn-danger me-2" href="login.html">Log in</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
     <div class="container d-flex align-items-center" style="height: calc(100vh - 56px);">
       <div class="form-container">
         <h1>Sign up</h1>
@@ -70,13 +51,13 @@
           </button>
         </form>
         <div class="text-center mt-3">
-          <a href="#" class="text-muted">Back</a>
+          <a href="index.html" class="text-muted">Back</a>
         </div>
       </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/app.css"></script>
   </body>
 </html>
